--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -143,7 +143,7 @@
                             android:text=""
                             android:textSize="@dimen/textSize" />
                         <Button
-                            android:textSize="@dimen/textSize"
+                            android:textSize="5sp"
                             android:layout_weight="1"
                             android:id="@+id/mbtn_sure_file_name"
                             android:layout_width="0dp"
@@ -269,7 +269,7 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="25dp"
                     android:orientation="horizontal">
                     <CheckBox
                         android:checked="true"
@@ -313,28 +313,29 @@
                             android:id="@+id/btn_hori_gain"
                             android:layout_width="0dp"
                             android:layout_weight="1"
-                            android:layout_height="wrap_content"
+                            android:layout_height="35dp"
                             android:onClick="btn_horizongtalGain"
                             android:text="水平"
-                            android:textSize="@dimen/textSize" />
+                            android:textSize="5sp" />
                         <Button
                             android:layout_gravity="center"
                             android:id="@+id/btn_stable_gain"
                             android:layout_width="0dp"
                             android:layout_weight="1"
-                            android:layout_height="wrap_content"
+                            android:layout_height="35dp"
                             android:onClick="btn_stableKGain"
                             android:text="步进"
-                            android:textSize="@dimen/textSize" />
+                            android:textSize="5sp" />
                         <TextView
                             android:layout_gravity="center"
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             android:layout_height="wrap_content"
-                            android:textSize="@dimen/textSize"
+                            android:textSize="5sp"
                             android:text="系数"/>
 
                         <EditText
+                            android:imeOptions="actionDone"
                             android:layout_gravity="center"
                             android:id="@+id/et_horGain_coe"
                             android:layout_width="0dp"
@@ -347,10 +348,10 @@
                             android:id="@+id/btn_gain_apply"
                             android:layout_width="0dp"
                             android:layout_weight="1"
-                            android:layout_height="wrap_content"
+                            android:layout_height="35dp"
                             android:onClick="btn_gain_apply"
                             android:text="应用"
-                            android:textSize="@dimen/textSize" />
+                            android:textSize="5sp" />
 
                     </LinearLayout>
                     <View
@@ -359,7 +360,7 @@
                         android:background="#000"/>
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="25dp"
                         android:orientation="horizontal">
                         <CheckBox
                             android:id="@+id/checkbox_backremove"
@@ -398,11 +399,11 @@
                         <Button
                             android:id="@+id/btn_dynamic_backgrd"
                             android:layout_width="0dp"
-                            android:layout_height="wrap_content"
+                            android:layout_height="35dp"
                             android:layout_weight="1"
                             android:onClick="btn_dynamic_backgrd"
                             android:text="背景去噪"
-                            android:textSize="@dimen/textSize" />
+                            android:textSize="5sp" />
                         <!--                        <Button-->
                         <!--                            android:id="@+id/btn_background_remove"-->
                         <!--                            android:layout_width="40dp"-->
@@ -424,7 +425,7 @@
                         <RadioGroup
                             android:id="@+id/radioGroup1"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="25dp"
                             android:orientation="horizontal" >
                             <CheckBox
                                 android:id="@+id/checkbox_filter"
@@ -480,30 +481,32 @@
                             android:textSize="@dimen/textSize"
                             ></TextView>
                         <EditText
+                            android:imeOptions="actionDone"
                             android:id="@+id/et_m_low_f"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text=""
-                            android:textSize="@dimen/textSize"></EditText>
+                            android:textSize="5sp"></EditText>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="高频截止"
                             android:textSize="@dimen/textSize"></TextView>
                         <EditText
+                            android:imeOptions="actionDone"
                             android:id="@+id/et_m_high_f"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text=""
-                            android:textSize="@dimen/textSize"
+                            android:textSize="5sp"
                             ></EditText>
                         <Button
                             android:id="@+id/btn_lowhighf_apply"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="35dp"
                             android:text="应用"
                             android:onClick="btn_lowhighf_apply"
-                            android:textSize="@dimen/textSize"
+                            android:textSize="5sp"
                             ></Button>
 
                     </LinearLayout>
@@ -513,11 +516,11 @@
                         android:background="#000"/>
                     <Button
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="35dp"
                         android:text="处理恢复默认"
                         android:insetTop="0dp"
                         android:insetBottom="0dp"
-                        android:textSize="@dimen/textSize"
+                        android:textSize="5sp"
                         android:includeFontPadding="false"
                         android:onClick="btn_renew_filter"/>
                 </LinearLayout>
