--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -316,7 +316,7 @@
                             android:layout_height="35dp"
                             android:onClick="btn_horizongtalGain"
                             android:text="水平"
-                            android:textSize="5sp" />
+                            android:textSize="4sp" />
                         <Button
                             android:layout_gravity="center"
                             android:id="@+id/btn_stable_gain"
@@ -325,7 +325,7 @@
                             android:layout_height="35dp"
                             android:onClick="btn_stableKGain"
                             android:text="步进"
-                            android:textSize="5sp" />
+                            android:textSize="4sp" />
                         <TextView
                             android:layout_gravity="center"
                             android:layout_width="0dp"
@@ -351,7 +351,7 @@
                             android:layout_height="35dp"
                             android:onClick="btn_gain_apply"
                             android:text="应用"
-                            android:textSize="5sp" />
+                            android:textSize="4sp" />
 
                     </LinearLayout>
                     <View
@@ -514,15 +514,42 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:background="#000"/>
-                    <Button
+                    <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="35dp"
-                        android:text="处理恢复默认"
-                        android:insetTop="0dp"
-                        android:insetBottom="0dp"
-                        android:textSize="5sp"
-                        android:includeFontPadding="false"
-                        android:onClick="btn_renew_filter"/>
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        >
+                        <Button
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="35dp"
+                            android:text="处理恢复默认"
+                            android:insetTop="0dp"
+                            android:insetBottom="0dp"
+                            android:textSize="5sp"
+                            android:includeFontPadding="false"
+                            android:onClick="btn_renew_filter"/>
+                        <Button
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="35dp"
+                            android:text="保存参数"
+                            android:insetTop="0dp"
+                            android:insetBottom="0dp"
+                            android:textSize="5sp"
+                            android:includeFontPadding="false"
+                            android:onClick="btn_save_params"/>
+                        <Button
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="35dp"
+                            android:text="导入参数"
+                            android:insetTop="0dp"
+                            android:insetBottom="0dp"
+                            android:textSize="5sp"
+                            android:includeFontPadding="false"
+                            android:onClick="btn_import_params"/>
+                    </LinearLayout>
                 </LinearLayout>
 
             </LinearLayout>
@@ -712,6 +739,13 @@
         </LinearLayout>
 
     </LinearLayout>
+    <FrameLayout
+        android:layout_width="500dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center"
+        android:id="@+id/fl_contain_">
+
+    </FrameLayout>
 
 
-</RelativeLayout>
+</FrameLayout>
