--- a/app/src/main/res/layout/activity_upload_image.xml
+++ b/app/src/main/res/layout/activity_upload_image.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.UpLoad.UploadImageActivity">
+    tools:context="com.example.upload.UploadImageActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
