--- a/app/src/main/res/layout/activity_my_dialog2.xml
+++ b/app/src/main/res/layout/activity_my_dialog2.xml
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <TextView
-                    android:text="线路名"
+                    android:text="项目名称"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -95,7 +95,7 @@
                     android:background="#000"
                     />
                 <TextView
-                    android:text="挡墙类型"
+                    android:text="检测内容"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -132,7 +132,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <TextView
-                    android:text="挡墙高度"
+                    android:text="项目编号"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -164,7 +164,7 @@
                     android:background="#000"
                     />
                 <TextView
-                    android:text="天气"
+                    android:text="检测位置"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -196,7 +196,7 @@
                     android:background="#000"
                     />
                 <TextView
-                    android:text="片石尺寸"
+                    android:text="测线编号"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -227,33 +227,7 @@
                     android:layout_height="match_parent"
                     android:background="#000"
                     />
-                <TextView
-                    android:text="行别"
-                    android:layout_width="80dp"
-                    android:layout_margin="5dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:textSize="@dimen/textNormSize"
-                    android:textColor="#000"
-                    />
-                <TextView
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:background="#000"
-                    />
-                <EditText
-                    android:imeOptions="actionDone"
-                    android:id="@+id/et_cxbh2"
-                    android:layout_width="80dp"
-                    android:background="@android:drawable/edit_text"
-                    android:layout_height="30dp"
-                    android:layout_weight="1"
-                    android:layout_margin="5dp"
-                    android:gravity="center"
-                    android:textSize="@dimen/textNormSize"
-                    android:textColor="#000"
-                    />
+
             </LinearLayout>
             <TextView
                 android:layout_width="match_parent"
@@ -266,133 +240,176 @@
                 android:layout_height="1dp"
                 android:background="#000"
                 />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <TextView
-                    android:text="挡墙倾斜度"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_margin="5dp"
+                    android:layout_weight="1"
                     android:gravity="center"
-                    android:textSize="@dimen/textNormSize"
+                    android:text="起始里程"
                     android:textColor="#000"
-                    />
+                    android:textSize="@dimen/textNormSize" />
+
                 <TextView
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="#000"
-                    />
+                    android:background="#000" />
+
                 <EditText
+                    android:id="@+id/et_cxbh2"
+                    android:layout_width="80dp"
+                    android:layout_height="30dp"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:background="@android:drawable/edit_text"
+                    android:gravity="center"
                     android:imeOptions="actionDone"
+                    android:textColor="#000"
+                    android:textSize="@dimen/textNormSize" />
+                <TextView
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="#000" />
+                <TextView
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:text="终止里程"
+                    android:textColor="#000"
+                    android:textSize="@dimen/textNormSize" />
+
+                <TextView
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="#000" />
+
+                <EditText
                     android:id="@+id/et_cxorient2"
                     android:layout_width="80dp"
-                    android:background="@android:drawable/edit_text"
                     android:layout_height="30dp"
-                    android:layout_weight="1"
                     android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:background="@android:drawable/edit_text"
+                    android:baselineAligned="false"
                     android:gravity="center"
-                    android:textSize="@dimen/textNormSize"
+                    android:imeOptions="actionDone"
                     android:textColor="#000"
-                    />
+                    android:textSize="@dimen/textNormSize" />
+
                 <TextView
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="#000"
-                    />
+                    android:background="#000" />
+
                 <TextView
-                    android:text="挡墙起止里程"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_margin="5dp"
+                    android:layout_weight="1"
                     android:gravity="center"
-                    android:textSize="@dimen/textNormSize"
+                    android:text="挡墙起止里程"
                     android:textColor="#000"
-                    />
+                    android:textSize="@dimen/textNormSize"
+                    android:visibility="gone" />
+
                 <TextView
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
                     android:background="#000"
-                    />
+                    android:visibility="gone" />
+
                 <EditText
-                    android:imeOptions="actionDone"
                     android:id="@+id/et_cxstart2"
                     android:layout_width="80dp"
-                    android:background="@android:drawable/edit_text"
                     android:layout_height="30dp"
-                    android:layout_weight="1"
                     android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:background="@android:drawable/edit_text"
                     android:gravity="center"
-                    android:textSize="@dimen/textNormSize"
+                    android:imeOptions="actionDone"
                     android:textColor="#000"
-                    />
+                    android:textSize="@dimen/textNormSize"
+                    android:visibility="gone" />
+
                 <TextView
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
                     android:background="#000"
-                    />
+                    android:visibility="gone" />
+
                 <TextView
-                    android:text="表面破损情况"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:layout_margin="5dp"
+                    android:layout_weight="1"
                     android:gravity="center"
-                    android:textSize="@dimen/textNormSize"
+                    android:text="表面破损情况"
                     android:textColor="#000"
-                    />
+                    android:textSize="@dimen/textNormSize"
+                    android:visibility="gone" />
+
                 <TextView
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
                     android:background="#000"
-                    />
+                    android:visibility="gone" />
+
                 <EditText
-                    android:imeOptions="actionDone"
                     android:id="@+id/et_cxstop2"
                     android:layout_width="80dp"
-                    android:background="@android:drawable/edit_text"
                     android:layout_height="30dp"
-                    android:layout_weight="1"
-                    android:gravity="center"
                     android:layout_margin="5dp"
-                    android:textSize="@dimen/textNormSize"
+                    android:layout_weight="1"
+                    android:background="@android:drawable/edit_text"
+                    android:gravity="center"
+                    android:imeOptions="actionDone"
                     android:textColor="#000"
-                    />
+                    android:textSize="@dimen/textNormSize"
+                    android:visibility="gone" />
+
                 <TextView
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
                     android:background="#000"
-                    />
+                    android:visibility="gone" />
+
                 <TextView
-                    android:text="表面植被情况"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:layout_margin="5dp"
-                    android:textSize="@dimen/textNormSize"
+                    android:text="表面植被情况"
                     android:textColor="#000"
-                    />
+                    android:textSize="@dimen/textNormSize"
+                    android:visibility="gone" />
+
                 <TextView
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
                     android:background="#000"
-                    />
+                    android:visibility="gone" />
+
                 <EditText
-                    android:imeOptions="actionDone"
                     android:id="@+id/et_dqloc2"
                     android:layout_width="80dp"
-                    android:background="@android:drawable/edit_text"
                     android:layout_height="30dp"
-                    android:layout_weight="1"
                     android:layout_margin="5dp"
+                    android:layout_weight="1"
+                    android:background="@android:drawable/edit_text"
                     android:gravity="center"
-                    android:textSize="@dimen/textNormSize"
+                    android:imeOptions="actionDone"
                     android:textColor="#000"
-                    />
+                    android:textSize="@dimen/textNormSize"
+                    android:visibility="gone" />
             </LinearLayout>
 
             <TextView
@@ -405,7 +422,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <TextView
-                    android:text="采集人员"
+                    android:text="施工单位负责人及其联系电话"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -427,7 +444,7 @@
                     android:layout_margin="5dp"
                     android:gravity="center"
                     android:imeOptions="actionDone"
-                    android:hint="请输入姓名"
+                    android:hint="请输入姓名和联系方式"
                     android:textSize="@dimen/textNormSize"
                     android:textColor="#000"
                     />
@@ -437,7 +454,7 @@
                     android:background="#000"
                     />
                 <TextView
-                    android:text="主机序号"
+                    android:text="检测单位负责人及其联系电话"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -462,7 +479,7 @@
                     android:imeOptions="actionDone"
                     android:textSize="@dimen/textNormSize"
                     android:textColor="#000"
-                    android:hint="请输入主机序号"
+                    android:hint="请输入姓名和联系方式"
                     />
             </LinearLayout>
             <TextView
