--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -51,6 +51,7 @@
                     android:text="用户名" />
             </LinearLayout>
             <EditText
+                android:imeOptions="actionDone"
                 android:id="@+id/et_login_user"
                 android:layout_gravity="center"
                 android:layout_width="0dp"
@@ -83,6 +84,7 @@
                     android:text="密码" />
             </LinearLayout>
             <EditText
+                android:imeOptions="actionDone"
                 android:inputType="textPassword"
                 android:id="@+id/et_login_pwd"
                 android:layout_gravity="center"
