完成13个测线表单的绘制(ListView)

--- a/app/src/main/res/layout/activity_my_dialog2.xml
+++ b/app/src/main/res/layout/activity_my_dialog2.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:background="#fff"
-    android:layout_width="@dimen/mydialogWidth"
-    android:layout_height="@dimen/mydialogHeight"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     >
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
