--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,7 +14,7 @@
 
     <dimen name="textsSmallSize">6sp</dimen>
     <dimen name="textSmallSize">8sp</dimen>
-
+    <dimen name="textmydialogssmallSize">6sp</dimen>
     <dimen name="mydialogWidth">1200dp</dimen>
     <dimen name="mydialogHeight">400dp</dimen>
 
