--- a/app/src/main/res/values-2000x1200/dimens.xml
+++ b/app/src/main/res/values-2000x1200/dimens.xml
@@ -3,6 +3,9 @@
     <dimen name="textSize">16sp</dimen>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+<!--    <dimen name="dialog_small_size"></dimen>-->
+
     <dimen name="textNormSize">20sp</dimen>
     <dimen name="textLargeSize">10sp</dimen>
     <dimen name="textTitleLargeSize">20sp</dimen>
@@ -10,9 +13,10 @@
 
     <dimen name="textsSmallSize">16sp</dimen>
     <dimen name="textSmallSize">15sp</dimen>
+    <dimen name="textmydialogssmallSize">7sp</dimen>
 
-    <dimen name="mydialogWidth">1200dp</dimen>
-    <dimen name="mydialogHeight">400dp</dimen>
+    <dimen name="mydialogWidth">900dp</dimen>
+    <dimen name="mydialogHeight">700dp</dimen>
 
     <dimen name="batteryNomalWidth">170dp</dimen>
     <dimen name="batteryNomalHeight">40dp</dimen>
