更新扫码显示

--- a/app/src/main/res/values-2000x1200/dimens.xml
+++ b/app/src/main/res/values-2000x1200/dimens.xml
@@ -8,7 +8,7 @@
 
     <dimen name="textNormSize">20sp</dimen>
     <dimen name="textLargeSize">10sp</dimen>
-    <dimen name="textTitleLargeSize">20sp</dimen>
+    <dimen name="textTitleLargeSize">30sp</dimen>
     <dimen name="textTitleSize">14sp</dimen>
 
     <dimen name="textsSmallSize">16sp</dimen>
@@ -17,6 +17,9 @@
 
     <dimen name="mydialogWidth">900dp</dimen>
     <dimen name="mydialogHeight">700dp</dimen>
+
+    <dimen name="mydialogScanWidth">700dp</dimen>
+    <dimen name="mydialogScanHeight">400dp</dimen>
 
     <dimen name="batteryNomalWidth">170dp</dimen>
     <dimen name="batteryNomalHeight">40dp</dimen>
