--- a/app/src/main/res/layout/my_dialog.xml
+++ b/app/src/main/res/layout/my_dialog.xml
@@ -17,6 +17,8 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -44,9 +46,10 @@
 
 
                 <TextView
+
                     android:id="@+id/my_dialog_title"
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_weight="1"
                     android:background="@drawable/tv_bg"
@@ -63,16 +66,32 @@
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:layout_weight="1"
-                        android:background="@drawable/tv_bg"
                         android:gravity="center"
-                        android:text="项目名称"
-                        android:textColor="#000"
-                        android:textSize="@dimen/textmydialogssmallSize" />
+                        android:layout_height="match_parent">
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="3"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:background="@drawable/tv_bg"
+                            android:layout_gravity="center"
+                            android:text="项目名称"
+                            android:textColor="#000"
+                            android:textSize="@dimen/textmydialogssmallSize" >
+                        </TextView>
+                        <ImageButton
+                            android:background="@drawable/tv_bg"
+                            android:id="@+id/ib_touchShow"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/touch_show"/>
+
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/tv_dqbh"
@@ -88,6 +107,8 @@
 
 
                 <ImageButton
+                    android:layout_gravity="center"
+                    android:background="@drawable/tv_bg"
                     android:id="@+id/iv_scanicon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -106,6 +127,7 @@
                 android:orientation="vertical">
 
                 <LinearLayout
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
@@ -152,11 +174,13 @@
                 </LinearLayout>
 
                 <TextView
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:background="#000" />
 
                 <LinearLayout
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
