--- a/app/src/main/res/layout/scaninfo.xml
+++ b/app/src/main/res/layout/scaninfo.xml
@@ -543,7 +543,80 @@
                 android:textSize="@dimen/textsmallSize"
                 android:background="@drawable/tv_bg"/>
         </LinearLayout>
-
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:gravity="center"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="@dimen/textsmallSize"
+                android:background="@drawable/tv_bg"
+                android:text="天线型号"/>
+            <TextView
+                android:gravity="center"
+                android:id="@+id/antModel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:textSize="@dimen/textsmallSize"
+                android:background="@drawable/tv_bg"/>
+            <TextView
+                android:gravity="center"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="@dimen/textsmallSize"
+                android:background="@drawable/tv_bg"
+                android:text="天线编号"/>
+            <TextView
+                android:gravity="center"
+                android:id="@+id/antBianhao"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:textSize="@dimen/textsmallSize"
+                android:background="@drawable/tv_bg"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:gravity="center"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="@dimen/textsmallSize"
+                android:background="@drawable/tv_bg"
+                android:text="主机型号"/>
+            <TextView
+                android:gravity="center"
+                android:id="@+id/pcModel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:textSize="@dimen/textsmallSize"
+                android:background="@drawable/tv_bg"/>
+            <TextView
+                android:gravity="center"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textSize="@dimen/textsmallSize"
+                android:background="@drawable/tv_bg"
+                android:text="主机编号"/>
+            <TextView
+                android:gravity="center"
+                android:id="@+id/pcBianhao"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:textSize="@dimen/textsmallSize"
+                android:background="@drawable/tv_bg"/>
+        </LinearLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="5dp"/>
