--- a/app/src/main/res/layout/my_dialog_tky.xml
+++ b/app/src/main/res/layout/my_dialog_tky.xml
@@ -15,8 +15,9 @@
             android:layout_height="10dp" />
 
         <LinearLayout
+            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:baselineAligned="false"
             android:orientation="vertical">
 
@@ -453,7 +454,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="10"
             android:orientation="vertical">
 
             <ListView
@@ -464,8 +466,9 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:orientation="vertical">
 
             <LinearLayout
